force-app/main/default/objects/i2SEMA_Config__c/i2SEMA_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>i2SEMA 설정 관리</description>
    <label>i2SEMA Config</label>
</CustomObject>