force-app/main/default/objects/i2SEMA_Config__c/fields/AccountPhone__c.field-meta.xml
<CustomField>
    <fullName>AccountPhone__c</fullName>
    <defaultValue>&apos;Phone&apos;</defaultValue>
    <description>Account&apos;s Default Phone Field API Name</description>
    <label>Account Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>