force-app/main/default/objects/i2SEMA_Config__c/fields/ChatterTextLimit__c.field-meta.xml
<CustomField>
    <fullName>ChatterTextLimit__c</fullName>
    <defaultValue>5000</defaultValue>
    <description>Chatter 메세지 용량 제한 최대 5000KB</description>
    <inlineHelpText>Chatter 메세지 용량 제한 최대 5000KB</inlineHelpText>
    <label>Chatter Text Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>