force-app/main/default/objects/i2SEMA_Config__c/fields/ClientSideLog__c.field-meta.xml
<CustomField>
    <fullName>ClientSideLog__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable the client-side javascript console log</description>
    <inlineHelpText>Enable the client-side javascript console log</inlineHelpText>
    <label>Client-Side Log</label>
    <type>Checkbox</type>
</CustomField>