force-app/main/default/objects/i2SEMA_Config__c/fields/ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactPhone__c</fullName>
    <defaultValue>&apos;Phone&apos;</defaultValue>
    <description>Contact&apos;s Default Phone Field API Name</description>
    <label>Contact Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>