force-app/main/default/objects/i2SEMA_Config__c/fields/EventExecuteLimit__c.field-meta.xml
<CustomField>
    <fullName>EventExecuteLimit__c</fullName>
    <defaultValue>10</defaultValue>
    <description>자동화 처리 생성 수 제한</description>
    <inlineHelpText>자동화 처리 생성 수 제한</inlineHelpText>
    <label>Event Execute Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>