force-app/main/default/objects/i2SEMA_Config__c/fields/FileUploadCountLimit__c.field-meta.xml
<CustomField>
    <fullName>FileUploadCountLimit__c</fullName>
    <defaultValue>1</defaultValue>
    <description>파일 업로드 수 제한</description>
    <inlineHelpText>파일 업로드 수 제한</inlineHelpText>
    <label>File Upload Count Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>