force-app/main/default/objects/i2SEMA_Config__c/fields/FileUploadSizeLimit__c.field-meta.xml
<CustomField>
    <fullName>FileUploadSizeLimit__c</fullName>
    <defaultValue>102400</defaultValue>
    <description>파일 업로드 용량 제한 기본값 : 10KB / 최대 200KB</description>
    <inlineHelpText>파일 업로드 용량 제한 기본값 : 10KB / 최대 200KB</inlineHelpText>
    <label>File Upload Size Limit (Byte)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>