force-app/main/default/objects/i2SEMA_Config__c/fields/IFFileStatus__c.field-meta.xml
<CustomField>
    <fullName>IFFileStatus__c</fullName>
    <defaultValue>true</defaultValue>
    <description>파일 인터페이스를 Byte Stream으로 전송할지 URL로 전송할지 설정값 반환
FALSE : URL , TRUE : Byte Stream
deprecated  사용하지 않음.</description>
    <inlineHelpText>파일 인터페이스를 Byte Stream으로 전송할지 URL로 전송할지 설정값 반환
FALSE : URL , TRUE : Byte Stream
deprecated  사용하지 않음.</inlineHelpText>
    <label>Interface File Status</label>
    <type>Checkbox</type>
</CustomField>