force-app/main/default/objects/i2SEMA_Config__c/fields/KakaoFriendTalkTextLimit__c.field-meta.xml
<CustomField>
    <fullName>KakaoFriendTalkTextLimit__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>카카오 친구톡 메세지 용량 제한</description>
    <inlineHelpText>카카오 친구톡 메세지 용량 제한 기본 1000KB</inlineHelpText>
    <label>Kakao Friend Talk Text Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>