force-app/main/default/objects/i2SEMA_Config__c/fields/KakaoNotificationTalkTextLimit__c.field-meta.xml
<CustomField>
    <fullName>KakaoNotificationTalkTextLimit__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>카카오 알림톡 메세지 용량 제한 기본 1000KB</description>
    <inlineHelpText>카카오 알림톡 메세지 용량 제한 기본 1000KB</inlineHelpText>
    <label>Kakao Notification Talk Text Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>