force-app/main/default/objects/i2SEMA_Config__c/fields/LeadPhone__c.field-meta.xml
<CustomField>
    <fullName>LeadPhone__c</fullName>
    <defaultValue>&apos;Phone&apos;</defaultValue>
    <description>Lead&apos;s Default Phone Field API Name</description>
    <label>Lead Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>