force-app/main/default/objects/i2SEMA_Config__c/fields/LMSTextLimit__c.field-meta.xml
<CustomField>
    <fullName>LMSTextLimit__c</fullName>
    <defaultValue>2000</defaultValue>
    <description>LMS 메세지 용량 제한 기본 2000KB</description>
    <inlineHelpText>LMS 메세지 용량 제한 기본 2000KB</inlineHelpText>
    <label>LMS Text Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>