force-app/main/default/objects/i2SEMA_Config__c/fields/MMSTextLimit__c.field-meta.xml
<CustomField>
    <fullName>MMSTextLimit__c</fullName>
    <defaultValue>2000</defaultValue>
    <description>MMS 메세지 용량 제한 기본 2000KB</description>
    <inlineHelpText>MMS 메세지 용량 제한 기본 2000KB</inlineHelpText>
    <label>MMS Text Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>