force-app/main/default/objects/i2SEMA_Config__c/fields/ReservationMaxTime__c.field-meta.xml
<CustomField>
    <fullName>ReservationMaxTime__c</fullName>
    <defaultValue>3</defaultValue>
    <description>예약 발송 최대 기간 제한  기본 3개월</description>
    <inlineHelpText>예약 발송 최대 기간 제한  기본 3개월</inlineHelpText>
    <label>Reservation Max Time(Month)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>