force-app/main/default/objects/i2SEMA_Config__c/fields/ReservationMInTime__c.field-meta.xml
<CustomField>
    <fullName>ReservationMInTime__c</fullName>
    <defaultValue>30</defaultValue>
    <description>예약발송 최소 시간 당일 발송 불가 
deprecated</description>
    <inlineHelpText>예약발송 최소 시간 당일 발송 불가 
deprecated</inlineHelpText>
    <label>Reservation MIn Time(Min)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>