force-app/main/default/objects/i2SEMA_Config__c/fields/SMSTextLimit__c.field-meta.xml
<CustomField>
    <fullName>SMSTextLimit__c</fullName>
    <defaultValue>80</defaultValue>
    <description>SMS 메세지 용량 제한 최대 80KB</description>
    <inlineHelpText>SMS 메세지 용량 제한 최대 80KB</inlineHelpText>
    <label>SMS Text Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>