force-app/main/default/objects/i2SEMA_Config__c/fields/UserPhone__c.field-meta.xml
<CustomField>
    <fullName>UserPhone__c</fullName>
    <defaultValue>&apos;Phone&apos;</defaultValue>
    <description>User&apos;s Default Phone Field API Name</description>
    <label>User Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>